plugins {
    id 'fabric-loom' version "${loom_version}"
    id 'maven-publish'
    id 'com.diffplug.spotless' version '8.2.1'
}

version = project.mod_version
group = project.maven_group

base {
    archivesName = project.archives_base_name
}

repositories {
    // Add repositories to retrieve artifacts from in here.
    // You should only use this when depending on other mods because
    // Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
    // See https://docs.gradle.org/current/userguide/declaring_repositories.html
    // for more information about repositories.
    maven { url = 'https://api.modrinth.com/maven' }
    maven { url = 'https://maven.nucleoid.xyz/' }
    maven { url = 'https://maven.fabricmc.net/' }
    mavenCentral()
    maven {
        name = "Quartz"
        url = "https://repo1.maven.org/maven2/"
    }
}

loom {
    splitEnvironmentSourceSets()

    mods {
        "serverutils" {
            sourceSet sourceSets.main
            sourceSet sourceSets.client
        }
    }

}

dependencies {
    // To change the versions see the gradle.properties file
    minecraft "com.mojang:minecraft:${project.minecraft_version}"
    mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
    modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"

    // Fabric API. This is technically optional, but you probably want it anyway.
    modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"

    modImplementation include("maven.modrinth:midnightlib:${project.midnightlib_version}")

    // Text Placeholder API (QuickText形式のテキスト整形)
    modImplementation include("eu.pb4:placeholder-api:${project.placeholder_api_version}")

    // Quartz scheduler for webhook scheduling
    modImplementation include("org.quartz-scheduler:quartz:2.5.2")
    // Quartzの依存関係
    modImplementation include("org.slf4j:slf4j-api:2.0.17")
    modImplementation include("com.zaxxer:HikariCP:7.0.2") { exclude(group: "*") }

    // Gson for JSON processing (if not already available through Minecraft)
    modImplementation include("com.google.code.gson:gson:2.13.2")
}

processResources {
    inputs.property "version", project.version

    filesMatching("fabric.mod.json") {
        expand "version": inputs.properties.version
    }
}

tasks.withType(JavaCompile).configureEach {
    it.options.release = 21
}

java {
    // Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
    // if it is present.
    // If you remove this line, sources will not be generated.
    withSourcesJar()

    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

jar {
    inputs.property "archivesName", project.base.archivesName

    from("LICENSE") {
        rename { "${it}_${inputs.properties.archivesName}" }
    }
}

// configure the maven publication
publishing {
    publications {
        create("mavenJava", MavenPublication) {
            artifactId = project.archives_base_name
            from components.java
        }
    }

    // See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
    repositories {
        // Add repositories to publish to here.
        // Notice: This block does NOT have the same function as the block in the top level.
        // The repositories here will be used for publishing your artifact, not for
        // retrieving dependencies.
    }
}

spotless {
    java {
        target 'src/**/*.java'
        googleJavaFormat()
        removeUnusedImports()
        trimTrailingWhitespace()
        endWithNewline()
    }
}

